objects/CMPL123CME__MDR__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__MDR_Submission__c</fullName>
        <label>MDR Submission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to submit</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__MDR_Type__c</fullName>
        <label>MDR Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Supplemental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__MFG_Name__c</fullName>
        <label>Mfg Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__MFG__c</fullName>
        <label>Mfg</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__MFR_Report_Ref__c</fullName>
        <formula>IF(OR(ISNULL(CMPL123CME__Mfr_Report_Number__c),ISBLANK(CMPL123CME__Mfr_Report_Number__c)),'',CMPL123CME__Mfr_Report_Number__c &amp; "-" &amp; IF( OR(RecordType.Name = 'Initial',CMPL123CME__Follow_up_No__c == 'NA'), '00', IF(LEN(CMPL123CME__Follow_up_No__c) &lt; 2,'0'&amp;CMPL123CME__Follow_up_No__c,CMPL123CME__Follow_up_No__c) ))</formula>
        <label>MFR Report Ref #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Email_Address__c</fullName>
        <description>Manufacturer Email Address</description>
        <inlineHelpText>Manufacturer Email Address</inlineHelpText>
        <label>Manufacturer Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer_Name__c</fullName>
        <description>Manufacturer Name</description>
        <inlineHelpText>Manufacturer Name</inlineHelpText>
        <label>Manufacturer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDR (Manufacturer)</relationshipLabel>
        <relationshipName>MDR1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Medication_1__c</fullName>
        <description>Medication 1</description>
        <label>Medication 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Medication_2__c</fullName>
        <description>Medication 2</description>
        <label>Medication 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Mfg_Follow_up_No__c</fullName>
        <label>Mfg Follow up No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Mfg_Phone_Number__c</fullName>
        <inlineHelpText>Manufacturer Phone Number</inlineHelpText>
        <label>Mfg Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Mfg_Report_No__c</fullName>
        <description>Mfg Report No</description>
        <label>Mfg Report No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Mfr_Report_Number__c</fullName>
        <description>Mfr Report#</description>
        <inlineHelpText>Mfr Report#</inlineHelpText>
        <label>Mfr Report#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Model_No__c</fullName>
        <label>Model No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__NDC_No__c</fullName>
        <description>NDC #</description>
        <label>NDC No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Narrative_Type__c</fullName>
        <inlineHelpText>Tell what naarative type you are providing, you can select both if you are providing both narratives</inlineHelpText>
        <label>Narrative Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Manufacturer Narrative</fullName>
                </value>
                <value>
                    <fullName>Corrected Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__OTCProduct__c</fullName>
        <label>OTC Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__OTC_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OTC Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Occupation_Addl_Text__c</fullName>
        <label>Occupation - Addl Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Occupation_Of_Initial_Reporter__c</fullName>
        <description>Occupation</description>
        <inlineHelpText>Occupation of Initial Reporter</inlineHelpText>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrator/Supervisor</fullName>
                </value>
                <value>
                    <fullName>Biomedical Engineer</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Nurse Practitioner</fullName>
                </value>
                <value>
                    <fullName>Other Healthcare Professional</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Risk Manager</fullName>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Occupation__c</fullName>
        <label>Unused Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Operator_of_Device__c</fullName>
        <label>Operator of Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health Professional</fullName>
                </value>
                <value>
                    <fullName>Lay User/Patient</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_No__c</fullName>
        <label>Other #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_RelevantHistory__c</fullName>
        <description>Other Relavat History, Including Preexisting Medical Conditions (e.g., allergies, race,pregnacy,
smoking and alcohol use, hepatic/renal dysfunction, etc. )</description>
        <inlineHelpText>Other Relavat History, Including Preexisting Medical Conditions (e.g., allergies, race,pregnacy,
smoking and alcohol use, hepatic/renal dysfunction, etc. ) Continuation Field Available in last section</inlineHelpText>
        <label>Other Relevant History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_Relevant_History__c</fullName>
        <description>Unused Field Other Relevant History</description>
        <label>Unused Field Other Relevant History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_Remarks__c</fullName>
        <description>Other Remarks</description>
        <inlineHelpText>Other Remarks</inlineHelpText>
        <label>Other Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_Remedial_Action__c</fullName>
        <description>Other Remedial Action</description>
        <label>Other Remedial Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_event_please_specify__c</fullName>
        <description>Other event - please specify</description>
        <label>Other event - please specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_loc_where_occurred__c</fullName>
        <description>Other loc where occurred</description>
        <label>Other loc where occurred</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_operator_of_Device__c</fullName>
        <description>Other operator of Device</description>
        <label>Other operator of Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_source_Please_specify__c</fullName>
        <description>Other source-Please specify</description>
        <label>Other source-Please specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Outcomes_attributed_to_AE__c</fullName>
        <description>Outcomes attributed to AE</description>
        <label>Outcomes attributed to AE</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Life-threatening</fullName>
                </value>
                <value>
                    <fullName>Disability or Permanent Damage</fullName>
                </value>
                <value>
                    <fullName>Congential Anomaly/Birth Defect</fullName>
                </value>
                <value>
                    <fullName>Hospitalization-initial or prolonged</fullName>
                </value>
                <value>
                    <fullName>Other Serious(Important Medical Events)</fullName>
                </value>
                <value>
                    <fullName>Required Intervention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__PMA_510_k__c</fullName>
        <description>PMA/510(k)</description>
        <label>PMA/510(k)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_Age_with_units__c</fullName>
        <formula>Text(CMPL123CME__Age_at_Time_of_Event__c) &amp; " " &amp; Text(CMPL123CME__Age_Units_Patient__c)</formula>
        <label>Patient Age (with units)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_ID__c</fullName>
        <description>Patient ID</description>
        <label>Patient ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_Identifier__c</fullName>
        <description>Patient Identifier</description>
        <inlineHelpText>Patient Identifier</inlineHelpText>
        <label>Patient Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_Weight_with_units__c</fullName>
        <formula>Text(CMPL123CME__Weight__c) &amp; " " &amp; Text(CMPL123CME__Weight_Units_Patient__c)</formula>
        <label>Patient Weight (with units)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Pre1938__c</fullName>
        <label>Pre 1938</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Pre_1938__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre 1938</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Procode__c</fullName>
        <description>Procode</description>
        <inlineHelpText>Procode</inlineHelpText>
        <label>Procode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Product_Code__c</fullName>
        <description>Product Code</description>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Product_Problem__c</fullName>
        <label>Product Problem</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Registered_Site_No__c</fullName>
        <label>Registered Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Registered_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registered Site</label>
        <referenceTo>CMPL123CME__Registered_Site__c</referenceTo>
        <relationshipLabel>MDR</relationshipLabel>
        <relationshipName>MDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Relevant_Tests_Lab_Data__c</fullName>
        <description>Replacement for the Unused field. Relevant Tests and Lab Data</description>
        <inlineHelpText>Relevant Tests and Lab Data</inlineHelpText>
        <label>Relevant Tests and Lab Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Relevant_tests_and_lab_data__c</fullName>
        <label>Unused Field Relevant tests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Report_Date__c</fullName>
        <inlineHelpText>Date of this Report (Device only)</inlineHelpText>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Report_sent_to_FDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report sent to FDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Report_sent_to_MFG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Report sent to MFG</description>
        <label>Report sent to Mfg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Report_source__c</fullName>
        <label>Report source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Foreign</fullName>
                </value>
                <value>
                    <fullName>Study</fullName>
                </value>
                <value>
                    <fullName>Literature</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Health Professional</fullName>
                </value>
                <value>
                    <fullName>User Facility</fullName>
                </value>
                <value>
                    <fullName>Company Representative</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Reporter_Initial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporter - Initial</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MDR</relationshipLabel>
        <relationshipName>MDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Reportsent_to_FDA__c</fullName>
        <label>Report sent to FDA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Reportsent_to_MFG__c</fullName>
        <label>Report sent to Mfg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Reprocessor__c</fullName>
        <description>Reprocessor</description>
        <label>Reprocessor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__STN_No__c</fullName>
        <description>STN No</description>
        <label>BLA No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Serial_No__c</fullName>
        <description>Serial No</description>
        <label>Serial No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Sex__c</fullName>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Short_Description__c</fullName>
        <description>Short Description</description>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__SingleUseDevice__c</fullName>
        <label>Single Use Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Single_Use_Device__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Use Device</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Therapy_Begin_date_1__c</fullName>
        <description>Therapy Begin date 1</description>
        <label>Therapy Begin date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Therapy_Begin_date_2__c</fullName>
        <description>Therapy Begin date 2</description>
        <label>Therapy Begin date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Therapy_Dates__c</fullName>
        <description>Therapy Dates</description>
        <label>Therapy Dates</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Therapy_End_date_1__c</fullName>
        <description>Therapy End date 1</description>
        <label>Therapy End date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Therapy_End_date_2__c</fullName>
        <description>Therapy End date 2</description>
        <label>Therapy End date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Type_Report_Device__c</fullName>
        <label>Type of Report - Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Follow Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Type_of_Report_Device__c</fullName>
        <inlineHelpText>Type of Report Device only(Initial, Follow-Up)</inlineHelpText>
        <label>Type of Report Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Type_of_Report_MultiSelect__c</fullName>
        <label>Type of Report</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5-day</fullName>
                </value>
                <value>
                    <fullName>7-day</fullName>
                </value>
                <value>
                    <fullName>10-day</fullName>
                </value>
                <value>
                    <fullName>15-day</fullName>
                </value>
                <value>
                    <fullName>30-day</fullName>
                </value>
                <value>
                    <fullName>Periodic</fullName>
                </value>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Follow Up No.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Type_of_Report__c</fullName>
        <label>Unused Type of Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5-day</fullName>
                </value>
                <value>
                    <fullName>7-day</fullName>
                </value>
                <value>
                    <fullName>10-day</fullName>
                </value>
                <value>
                    <fullName>15-day,30-day</fullName>
                </value>
                <value>
                    <fullName>Periodic</fullName>
                </value>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Follow Up No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Type_of_Reportable_Event__c</fullName>
        <label>Type of Reportable Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Serious Injury</fullName>
                </value>
                <value>
                    <fullName>Malfunction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__UF_Dist_Report_No__c</fullName>
        <description>UF/Dist Report No</description>
        <label>UF/Dist Report No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__UF_Importer_Report_Number__c</fullName>
        <description>UF/Importer Report#</description>
        <inlineHelpText>UF/Importer Report#</inlineHelpText>
        <label>UF/Importer Report#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__UF_Phone_Number__c</fullName>
        <inlineHelpText>Importer Phone Number</inlineHelpText>
        <label>UF Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Unique_Identifier_UDI__c</fullName>
        <label>Unique Identifier (UDI) #</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Usage_of_Device__c</fullName>
        <label>Usage of Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Use of Device</fullName>
                </value>
                <value>
                    <fullName>Reuse</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__User_Facility_Importer_Address__c</fullName>
        <description>User Facility/Importer Address</description>
        <inlineHelpText>User Facility/Importer Address</inlineHelpText>
        <label>User Facility/Importer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__User_Facility_Importer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Facility/Importer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MDR (User Facility/Importer Contact)</relationshipLabel>
        <relationshipName>MDR1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__User_Facility_Importer__c</fullName>
        <description>User Facility/Importer</description>
        <label>User Facility/Importer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__User_Facility_or_Importer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Facility or Importer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDR</relationshipLabel>
        <relationshipName>MDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Weight_Units_Patient__c</fullName>
        <description>Weight Units (Patient)</description>
        <label>Weight Units (Patient)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LBS</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Weight__c</fullName>
        <description>Weight</description>
        <label>Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>MDR</label>
    <listViews>
        <fullName>CMPL123CME__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Complaint__c</columns>
        <columns>CMPL123CME__Type_of_Report__c</columns>
        <columns>CMPL123CME__Serial_No__c</columns>
        <columns>CMPL123CME__Patient_ID__c</columns>
        <columns>CMPL123CME__MDR_Submission__c</columns>
        <columns>CMPL123CME__MDR_Type__c</columns>
        <columns>CMPL123CME__Initial_Report_Date_and_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MDR-{00000}</displayFormat>
        <label>SL No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDR</pluralLabel>
    <recordTypes>
        <fullName>CMPL123CME__AASR</fullName>
        <active>true</active>
        <label>AASR</label>
    </recordTypes>
    <recordTypes>
        <fullName>CMPL123CME__IASR</fullName>
        <active>true</active>
        <label>IASR</label>
    </recordTypes>
    <recordTypes>
        <fullName>CMPL123CME__Initial</fullName>
        <active>true</active>
        <description>Initial MDR Information</description>
        <label>Initial</label>
    </recordTypes>
    <recordTypes>
        <fullName>CMPL123CME__Supplemental</fullName>
        <active>true</active>
        <description>If you are a manufacturer, when you obtain information required under this part that you did not provide because it was not known or was not available when you submitted the initial report, you must submit the supplemental information to us within 1 month</description>
        <label>Supplemental</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CMPL123CME__Common_Device_Name_is_a_mandatory_field</fullName>
        <active>true</active>
        <description>Common Device Name is a mandatory field.</description>
        <errorConditionFormula>AND(RecordType.NamespacePrefix = "CMPL123CME", OR(RecordType.Name = "Initial", RecordType.Name = "Supplemental"), ISBLANK(CMPL123CME__Common_Device_Name__c))</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Common_Device_Name__c</errorDisplayField>
        <errorMessage>Common Device Name is a mandatory field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__Date_of_Death_Cannot_be_Future_Date</fullName>
        <active>true</active>
        <description>Date cannot be greater than today's date</description>
        <errorConditionFormula>if(CMPL123CME__Dateof_Death__c &gt;  TODAY(),true,false)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Date_of_Death__c</errorDisplayField>
        <errorMessage>Date cannot be greater than today's date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__Date_of_Event_Cannot_be_Future_Date</fullName>
        <active>true</active>
        <description>Date of event cannot be greater than today's date</description>
        <errorConditionFormula>if(CMPL123CME__Date_of_Event__c &gt;  TODAY(),true,false )</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Date_of_Event__c</errorDisplayField>
        <errorMessage>Date cannot be greater than today's date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__Date_of_Report_Cannot_be_Future_Date</fullName>
        <active>true</active>
        <errorConditionFormula>if(CMPL123CME__Date_of_this_Report__c &gt; TODAY(), true, false)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Date_of_this_Report__c</errorDisplayField>
        <errorMessage>Date cannot be greater than today's date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__Describe_Event_is_a_mandatory_field</fullName>
        <active>true</active>
        <description>Describe Event is a mandatory field.</description>
        <errorConditionFormula>AND(RecordType.NamespacePrefix = "CMPL123CME" , OR(RecordType.Name = "Initial" , RecordType.Name = "Supplemental"), ISBLANK(CMPL123CME__Describe_Event__c))</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Describe_Event__c</errorDisplayField>
        <errorMessage>Describe Event is a mandatory field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__Device_Manuf_Date_Cannot_be_Future_Date</fullName>
        <active>true</active>
        <errorConditionFormula>if(CMPL123CME__Device_mfg_date__c &gt; TODAY(), true, false)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Device_mfg_date__c</errorDisplayField>
        <errorMessage>Date cannot be greater than today's date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__Due_Date_Validation</fullName>
        <active>true</active>
        <description>Due Date Validation</description>
        <errorConditionFormula>DATEVALUE(CMPL123CME__Date_Due__c )   &gt;  CMPL123CME__ACK2_Date__c</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Date_Due__c</errorDisplayField>
        <errorMessage>Due date date is greater than aware Date and opened date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__Explant_Date_Cannot_be_Future_Date</fullName>
        <active>true</active>
        <errorConditionFormula>if(CMPL123CME__Explant_Date__c&gt; TODAY(),true,false)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Explant_Date__c</errorDisplayField>
        <errorMessage>Date cannot be greater than today's date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__Implant_Date_Cannot_be_Future_Date</fullName>
        <active>true</active>
        <errorConditionFormula>if(CMPL123CME__Implant_Date__c &gt; TODAY(),true,false)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Implant_Date__c</errorDisplayField>
        <errorMessage>Date cannot be greater than today's date</errorMessage>
    </validationRules>
</CustomObject>